--- a/application.yml
+++ b/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: "configserver"
   profiles:
-    active: native
+    active: dev
   cloud:
     config:
       server:
